--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -50,6 +51,8 @@
   <!-- Konten dinamis SPA -->
   <main id="main-content"></main>
   <div id="toast-container"></div> <!-- HARUS di luar main-content -->
+
+
 
   <!-- Footer -->
   <footer class="footer">
