--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <link rel="manifest" href="manifest.json">
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -95,5 +96,7 @@
 
     <!-- Script utama aplikasi SPA -->
     <script type="module" src="/src/scripts/app.js"></script>
+
+    <script src="bundle.js"></script>
   </body>
 </html>
