--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,12 @@
 
     <link rel="manifest" href="manifest.json" />
 
-    
+    <!-- Shoelace CSS & JS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.12.0/cdn/themes/light.css">
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.12.0/cdn/shoelace.js"></script>
+
+
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -106,6 +111,8 @@
 
     <!-- Script utama aplikasi SPA -->
     <!-- <script type="module" src="/src/scripts/app.js"></script> -->
+    <!-- Container alert -->
+    <sl-alert id="popup-alert" duration="4000" closable style="position: fixed; top: 1rem; right: 1rem; z-index: 9999;"></sl-alert>
 
     <script src="bundle.js"></script>
   </body>
